<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lista_campus">Lista Campus</string>
    <string name="tab_derecha">Principal</string>
    <string name="menu_nueva_campus">Nueva Campus</string>
    <string name="menu_preferencias_label">Preferencias</string>
    <string name="menu_about_label">Acerca De</string>
    <string name="title_activity_nueva_campus">Nueva campus</string>
    <string name="favorito">Favorito</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_posicion">Mi Posicion</string>
    <string name="boton_Distancia">Distancia</string>
    <string name="sin_datos">No hay Restaurantes</string>
    <string name="confirma_campus_nueva">Campus party registrada</string>
    <string name="btmi_posicion">Mi Posicion</string>
    <string name="bt_distancia">Distancia</string>
    <string name="error_message">Error al cargar los datos</string>
    <string name="datos_message">Datos cargados</string>
    <string name="acerca_de_title">Acerca de Campus v1.5</string>
    <string name="btaceptar_label">Aceptar</string>
    <string name="acerca_de_message">Campus 1.5\nCampus party para Android\n(c) 2014 Antonio Gracia</string>
    <string name="title_activity_preferencias">Preferencias</string>
    <string name="boton_mapa">Mapa</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="ver_el_mapa">Ver el Mapa</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_activity_mapa2">Mapa2</string>
    <string name="title_activity_campuses">CampusesActivity</string>
    <string name="me_gusta">Me Gusta</string>
    <string name="btNuevaCampusOpinion">Nueva Campus</string>
    <string name="ver_las_campus">Ver las campus</string>
    <string name="nombre_campus">Nombre</string>
    <string name="tvPaiscampus">Pais</string>
    <string name="opinionCampus">Opinon</string>
    <string name="has_estado">¿Has estado?</string>
    <string name="tienes_ticket">Ticket</string>
    <string name="vas_a_ir">¿Vas a ir?</string>
    <string name="nombre_campus_2">NombreCampus</string>
    <string name="pais_campus_2">Pais Campus</string>
     <string name="desactivar_sonido_label">Desactivar Sonido</string>
    <string name="desactivar_bienvenida_label">Desactivar Bienvenida</string>
    <string name="activar_fondo_label">Activar fondo</string>

</resources>
