<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <!--  -->
    <item
            android:id="@+id/menu_nueva_campus"
            android:icon="@drawable/database17"
            android:showAsAction="always"
            android:title="@string/menu_nueva_campus">
    </item>
     <!--  -->
    <item
            android:id="@+id/menu_preferencias"
           	android:icon="@drawable/machine2"
            android:showAsAction="always"
            android:title="@string/menu_preferencias_label">
    </item>
    
    <item
            android:id="@+id/menu_about"
           	android:icon="@drawable/help1"
            android:showAsAction="always"
            android:title="@string/menu_about_label">
    </item>

</menu>
